k8s/appointment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  namespace: appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: ghcr.io/tillpistiak/softwaretechnik-workshop-bht-2023/appointment-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /deployments/config/application.properties
              subPath: application.properties
              readOnly: true
          command: [java,-Dquarkus.config.locations=/deployments/config/application.properties,-jar,/deployments/quarkus-run.jar]
      volumes:
        - name: config-volume
          configMap:
            name: appointment-service-config
