k8s/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  namespace: appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-pv
              mountPath: /var/lib/mysql
        - name: adminer
          image: adminer
          ports:
            - containerPort: 8080
      volumes:
        - name: mariadb-pv
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
