k8s/appointment-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
  namespace: appointment-service
spec:
  selector:
    app: appointment-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
