k8s/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-internal-service
  namespace: appointment-service
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
