k8s/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-internal-service
  namespace: monitoring
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
