k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: appointment-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  # defaultBackend:
  #   service:
  #     name: appointment-service
  #     port:
  #       number: 80
  rules:
    - host: swt.bht.tillpistiak.com
      http:
        paths:
          - path: /appointment-service
            pathType: Prefix
            backend:
              service:
                name: appointment-service
                port:
                  number: 8080
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
#  tls:
#    - hosts:
#        - swt.bht.tillpistiak.com
#      secretName: tls-secret
  ingressClassName: nginx
